--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ authors = [
 ]
 dependencies = [
     "numpy>=2.0.0",
-    "pyyaml>=6.0.3"
+    "pyyaml>=6.0.3",
+    "matplotlib>=3.5.0"
 ]
 
 [project.optional-dependencies]
