Restructuration de l'architecture du projet parce que je trouvais que l'héritage s'y prêtait bien mais ça ne fonctionne toujours pas évidemment. Classe abstraite pour le type d'écoulement => profiter du polymorphisme + classe parente pour squeeze et journal bearing pas grand chose de différent dans les deux mais je trouvais que de mettre des if partout ne serait pas très beau haha

--- a/datas/squeeze_damper.yaml
+++ b/datas/squeeze_damper.yaml
@@ -1,12 +1,12 @@
 geometry: "SQUEEZE"
 
 constantes:
-  R0: 5
-  Ri: 4 
-  mu: 1e-5
-  U1: 1
-  U2: 1
+  R0: 0.2
+  Ri: 0.18
+  mu: 0.2
+  U1: 100
+  U2: 100
 
-mutable:
+parameters:
   tau_0: 5
   epsilon: 0.25
